@@ -3,3 +3,6 @@
   concept_yen_chin_pai: "Yen-chin Faction"
   concept_shih_chin_pai_desc: "The Shih-chin Faction is a faction within the court that advocates using domestic products to replace foreign opium in order to improve the trade deficit."
   concept_yen_chin_pai_desc: "The Yen-chin Faction is a faction within the court that advocates for the destruction of opium to maintain social stability."
+  geographic_region_begonia_leaf: "Begonia Leaf"
+  geographic_region_han_region: "Han Region"
+  geographic_region_han_region_desc: "The 18 provinces that form the core of China, historically inhabited predominantly by the Han ethnic group."
