@@ -398,3 +398,8 @@
   opium_wars_moh.1.a: "Hold those responsible accountable and punish the corrupt officials severely."
   opium_wars_moh.1.b: "Make up the deficit with additional taxes, restore customs revenue, and suppress the matter."
   opium_wars_moh.1.c: "Ignore it."
+  opium_wars_moh.2.t: "Joint Petition from Guangdong Factories"
+  opium_wars_moh.2.d: "Factories benefiting from the opium trade jointly petition to ease port regulations, offering large bribes in exchange."
+  opium_wars_moh.2.f: "Recently, several factory firms in Guangdong jointly submitted a petition, requesting the government to relax port regulations so they could more easily engage in the opium trade. These factories stated that if the government were to fulfill their request, they would be willing to offer large bribes in exchange for a more lenient trade environment.\n\n'Your Excellencies, these factories are an important pillar of the national economy. Easing the regulations will be beneficial for everyone!'"
+  opium_wars_moh.2.a: "Approve partial easing of restrictions at some ports"
+  opium_wars_moh.2.b: "Reject firmly, detain the merchants"
